src/index.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
:root{
    --color-one: #19c8fa ;
    --color-two: rgb(15 116 143 / 70%);
    --const-top-bottom-padding: 100px 0;
}
html {
    scroll-behavior: smooth;
}
body {
    font-family: "Open Sans", sans-serif;
}
ul {
    list-style: none;
}
.container{
    height: 100vh;
}
.Header{
    display: flex;
    width: 1130px;
    margin: auto;
    align-items: center;
    justify-content: space-between;
    position: relative;
    padding: 12px;
    z-index: 1;
}
.scroll-to-top{
    position: absolute;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
    color: var(--color-one);
    font-size: 32px;
    z-index: 9999;
    position: fixed;
    display: none;
}
.display-scroll{
    display: block;
    position: absolute;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
    color: var(--color-one);
    font-size: 32px;
    z-index: 9999;
    position: fixed;
}

.overlay{
    position: absolute;
    width: 100%;
    background-color: #00000066;
    height: 100vh;
    left: 0;
    top: 0;
    z-index: 0;
}
.Header a img{
    height: 40px;
}
.Header::after{
    content: '';
    position: absolute;
    bottom: 4px;
    width: 96%;
    height: 1px;
    background: white;
    z-index: 1;
}
ul{
    list-style: none;
}
.Header ul{
    display: flex;
    flex: 1;
    justify-content: flex-end;
    align-items: center;
}
.Header ul li{
    margin-right: 15px;
}
.Header ul li a{
    text-decoration: none;
    color: white;
    font-size: 14px;
    font-family: sans-serif;
    transition: .3s;
    padding: 19px 4px;
}
.Header ul li .active{
    text-decoration: none;
    color:var(--color-one);
    font-size: 14px;
    font-family: sans-serif;
    transition: .3s;
    padding: 19px 4px;
    border-bottom: 1px solid var(--color-one) ;
}
.Header ul li a:hover{
    color: var(--color-one);
    border-bottom: 1px solid var(--color-one) ;
    z-index: 2;
}
.Header ul li i{
    color: white;
    border-left: 3px solid white;
    padding-left: 12px;
    font-size: 18px;
    cursor: pointer;
    transition: .3s;
}
.Header ul li .search:hover{
    color: var(--color-one);
    border-left: 3px solid var(--color-one);
}
.menu{
    color: white;
    display: none;
    cursor: pointer;
}
.menu:hover{
    color: var(--color-one);
}
@media (max-width: 446px){
    .Header::after{
        width: 94.4%;
    }
}
.Header .toggle-menu {
    position: absolute;
    right: 11px;
    top: 54px;
    background: rgb(15 116 143 / 87%);;
    color: white;
    list-style: none;
    width: 166px;
    display: none;
    transition: .3s;
    animation-name: display;
    animation-duration: .6s;
}
@keyframes display {
    from{
        opacity: 50%;
    }
    50%{
        opacity: 75%;
    }
    to{
        opacity: 100%;
    }
}
.Header .hidMenu{
    display: none;
    transition: .5s;
}
.Header .toggle-menu .ul{
    padding: 13px;
    position: relative;
}
.Header .toggle-menu .arrow{
    position: absolute;
    top: -15px;
    font-size: 28px;
    color: rgb(15 116 143 / 87%);;
    right: 1px;
    border-bottom: 1px solid #8f8fff00;
}
.Header .toggle-menu .t-s{
    padding: 10px 0 0 0;
}
.Header .toggle-menu input{
    width: 100%;
    margin: 6px 0 0 6px;
    background-color: #8f8fff99;
    border: 1px solid #00000047;
}
.Header .toggle-menu .search{
    display: flex;
}

.Header .toggle-menu .ul li:not(:last-child){
    padding: 7px 0;
    border-bottom: 1px solid white;
    transition: .3s;
}
.Header .toggle-menu .ul li:hover{
    color: var(--color-one);
    padding-left: 3px;
}
.Header .toggle-menu li a{
    text-decoration: none;
    color: white;
}
.Header .toggle-menu li a:hover{
    color: var(--color-one);
    padding-left: 3px;
}
@media (max-width: 992px) {
    .Header ul{
        display: none;
    }
    .Header{
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: space-between;
        position: relative;
        padding: 12px;
    }
    .Header::after{
        width: 97.1%;
    }
    .menu{
        display: block;
    }
    .Header .toggle-menu {
        display: block;
    }
    .text{
        width: 100%;
    }

}
@media (min-width: 992px){
    .text{
        width:572px;;
    }
}
@media (max-width: 401px){
    .Header::after{
        width: 95.4%;
    }
}
@media (max-width: 768px){
    .Header .toggle-menu{
        width: 100%;
        height: 340px;
        right: 0;
    }
    .Header .toggle-menu .ul li:not(:last-child){
        padding: 12px 8px;
    }
    .Header .toggle-menu .arrow{
        right: 10px;
    }
    .Header .toggle-menu .ul li:hover{
        color: var(--color-one);
        padding-left: 3px;
    }
}
.Home{
    background-image: url(./imges/landing.jpg);
    background-size: cover;
    height: 100vh;
    width: 100%;
}
.text{
    position: absolute;
    top: 50%;
    transform: translate(0,-50%);
    background-color: var(--color-two);
    color: white;
    font-family: sans-serif;
    padding: 46px;
}
.text .content h2{
    line-height: 36px;
    margin-bottom: 15px;
}
.text .content p{
    line-height: 23px;
}
.Home .right-arrow{
    color: white;
    position: absolute;
    top: 50%;
    font-size: 33px;
    right: 10px;
}
.Home .left-arrow{
    color: white;
    position: absolute;
    top: 50%;
    font-size: 33px;
    left: 10px;
}
.left-arrow , .right-arrow{
    cursor: pointer;
}
.bullets{
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 30px;
    display: flex;
}
.bullet{
    height: 11px;
    margin-right: 9px;
    width: 11px;
    border: 2px solid white;
    border-radius: 50%;
}
.bt-c{
    background-color: var(--color-one);
}
.Services{
    justify-content: center;
    align-items: center;
    text-align: center;
}
.const-div{
    padding:var(--const-top-bottom-padding);
}
.const-div h1{
    font-weight: normal;
    font-size: 40px;
    position: relative;
    margin-bottom: 70px;
    text-transform: uppercase;
    text-align: center;
}
.const-div h1::after{
    content: '';
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 14px;
    height: 14px;
    border-radius: 50%;
    border: 2px solid #333;
    bottom: -38px;
    background-color: white;
}
.const-div h1::before{
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    height: 2px;
    background-color: #333;
    bottom: -30px;
    width: 120px;
}
.Services-content{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
    grid-column-gap: 40px;
    grid-row-gap: 60px;
    width: 1130px;
    margin: 0 auto 100px auto;
}
.Services-content .ser-box{
    display: flex;
    text-align: initial;
}
.Services-content .ser-box i{
    margin-right: 50px;
}
.Services-content .ser-box .text-cont h2 {
    color: var(--color-one);
    margin-bottom: 30px;
}
.Services-content .ser-box .text-cont p{
    line-height: 30px;
}
@media screen and (min-width: 992px) and (max-width: 1132px) { 
    .Header{
        width: 100%;
    }
}
@media (min-width: 768px) {
    .Services-content {
      width: 750px;
    }
  }
  /* Medium */
@media (min-width: 992px) {
    .Services-content {
      width: 970px;
    }
    .Services-content .ser-box{
        text-align: center;
        flex-direction: column;
    }
  }
  /* Large */
  @media (min-width: 1200px) {
    .Services-content {
      width: 1170px;
    }
  }
  @media(max-width:768px){
    .Services-content{
        width: 100%;
    }
    .Services-content .ser-box{
        text-align: center;
        flex-direction: column;
        margin: auto 30px;
    }
    .design .image{
        display: none;
    }
  }
  .design{
    padding-top: var(--const-top-bottom-padding);
    padding-bottom: var(--const-top-bottom-padding);
    height: 600px;
    position: relative;
    background-image: url(./imges/bg-d.jpg);
    background-size: cover;
    display: flex;
    align-items: center;
    overflow: hidden;
  }
  .design img{
    position: relative;
    bottom: -150px;
  }
  .image{
    osition: relative;
    z-index: 2;
    flex: 1;
  }
  .design .design-text{
    color: white;
    padding: 50px;
    background-color:var(--color-two);
    position: relative;
    z-index: 2;
    flex: 1;
    text-align: initial;
  }

.design .design-text ul li i{
    font-size: 19px;
    margin-right: 10px;
}
.design .design-text ul li {
    padding: 10px;
}
.design .design-text h2{
    padding: 10px;
}
.portfolio .const-div{
    text-align: center;
}
.prot-menu{
    display: flex;
    justify-content: center;
}
.prot-menu li{
    padding: 10px;
    cursor: pointer;
}
.prot-menu .active{
    background-color: var(--color-one);
}
.portfolio{
    padding-top: var(--section-padding);
    padding-bottom: var(--section-padding);
  }
  .portfolio .shuffle{
    display: flex;
    justify-content: center;
  }
  .portfolio .shuffle li{
    padding: 10px;
  }
  .portfolio .shuffle li.active {
    background-color: var(--main-color);
    color: white;
  }
  .portfolio .imgs-container{
    display: flex;
    flex-wrap: wrap;
    margin-top: 60px;
  }
  .portfolio .imgs-container .box{
    overflow: hidden;
    position: relative;
  }
  .portfolio .imgs-container .box:hover .caption{
    bottom: 0;
  }
  .portfolio .imgs-container .box:hover img{
    transform: rotate(3deg) scale(1.1);
  }
  @media (min-width: 768px) {
    .portfolio .imgs-container .box {
      flex-basis: 50%;
    }
  }
  @media (min-width: 1199px) {
    .portfolio .imgs-container .box {
      flex-basis: 25%;
    }
  }
  .portfolio .imgs-container .box img {
    max-width: 100%;
    transition: 0.3s;
  }
  .portfolio .imgs-container .box .caption {
    position: absolute;
    left: 0;
    padding: 20px;
    background-color: white;
    width: 100%;
    transition: 0.3s;
    bottom: -100%;
  }
  .portfolio .imgs-container .box .caption h4 {
    font-weight: normal;
    margin-bottom: 10px;
  }
  .portfolio .imgs-container .box .caption p {
    color: var(--main-color);
  }
  .portfolio .more {
    background-color: var(--color-one);
    color: white;
    padding: 15px 20px;
    display: block;
    width: fit-content;
    margin: 30px auto;
    text-decoration: none;
    text-transform: uppercase;
  }
  .About .const-div{
    text-align: center;
}
@media (max-width:750px){
    .About .const-div img{
        width: 100%;
    }
}

